<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Voice Control for Plex</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="stream_video_from_server">Stream video from the server</string>
    <string name="to_the_client">to the Client</string>
    <string name="resume_if_in_progress">Resume if in progress</string>
    <string name="search">Search</string>
    <string name="menu_about">About</string>
    <string name="about_text">Voice Control for Plex\n© 2013 Chris Bellew\nLicensed under GPLv3\n\nPlex is copyright Plex, Inc.</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_install_shortcut">Install Homescreen Shortcut</string>
    <string name="menu_tasker_import">Import Tasker Project</string>
    <string name="menu_install_tasker">Install Tasker</string>
    <string name="menu_install_utter">Install utter!</string>
    <string name="menu_install_autovoice">Install AutoVoice</string>
    <string name="menu_changelog">Changelog</string>
    <string name="feedback_voice">Voice</string>
    <string name="feedback_toast">Toast</string>
    <string name="now_playing_on">Now Playing On</string>
    <string name="voice">Voice</string>
    <string name="toast">Toast</string>
    <string name="scan_all">Scan All</string>
    <string name="not_set">not set</string>
    <string name="feedback">Feedback</string>
    <string name="errors">Errors</string>
    <string name="help_server">Select a Plex Media Server to stream from. If you have more than one media server, select &quot;Scan All&quot; to search all available servers for media. If you only have one, you should select it here as scanning all servers each time will take longer to trigger playback.</string>
    <string name="help_client">Select the default client to stream media to. You can easily stream to a different client by ending your search query with \&quot;on &lt;client name&gt;\&quot;, where &lt;client name&gt; is the name of the Plex Client.</string>
    <string name="help_feedback">Select which type of feedback I should give you.</string>
    <string name="help_errors">Select which type of feedback I should give you when I run into problems (can\'t find something to play, etc).</string>
    <string name="help_button_desc">Help Button</string>
    <string name="help_usage">Here are some examples to trigger playback:\n\nWatch V For Vendetta\nWatch Season 1 Episode 1 of Homeland\nWatch Breaking Bad Season 5 Episode 8\nWatch episode Once More With Feeling of Buffy The Vampire Slayer\nWatch the next episode of The Walking Dead\nWatch the latest episode of The Daily Show with Jon Stewart\n\nFor Music:\n"Listen to Black Sands by Bonobo" (to play a single song)\nListen to the album Drink The Sea by The Glitch Mob\nListen to the album Music Has The Right To Children (Artist is optional. Specify if more than one match is found)\n\nFor playback:\nPause Playback\nResume Playback\nStop Playback\n\nSeeking:\nOffset 1 hour 15 minutes 30 seconds\nOffset 30 minutes 5 seconds\n(Any combination of hours, minutes, and/or seconds, in that order)\n(You may also use \'timecode\' instead of \'offset\')\n\nIf you don\'t have \&quot;Resume if in progress\&quot; checked, you can selectively resume by saying \&quot;Resume watching\&quot; instead of \&quot;Watch\&quot;\n\nYou can also specify a client by adding \&quot;on &lt;client name&gt;\&quot; to your spoken query.</string>
    <string name="help_usage_button">Usage Examples</string>
    <string name="tasker_instructions">Voice Control for Plex also works through utter! and AutoVoice, in combination with Tasker. Use the buttons below to visit the respective applications in the Google Play Store.</string>
    <string name="tasker_import_header">Voice Control For Plex also works with utter! and AutoVoice. Use the button below to import the Tasker project to enable this functionality.</string>
    <string name="install_tasker">Install Tasker</string>
    <string name="install_utter">Install utter!</string>
    <string name="install_autovoice">Install AutoVoice</string>
    <string name="import_tasker_project">Import Tasker Project</string>
    <string name="import_tasker_instructions">Tasker Project imported. I will now open Tasker. Please tap on the Home Icon->Import, then select Voice Control for Plex.\n\nIf you plan to use utter!, you MUST go to utter! Settings&#8209;>Advanced&#8209;>Try Again&#8209;>Select \"Send to Tasker\".</string>
    <string name="select_voice">Select Voice</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_to_play">Sorry, I couldn\'t find anything to play.</string>
    <string name="http_status_code_error">Sorry, but I got an error, HTTP status code: %s</string>
    <string name="got_error">Sorry, but I got an error: %s</string>
    <string name="client_not_specified">Sorry, you didn\'t specify a client in the main settings, or I couldn\'t find it.</string>
    <string name="found_more_than_one_album">I found more than one matching album. Please specify artist.</string>
    <string name="couldnt_find_album">Sorry, I couldn\'t find an album to play.</string>
    <string name="couldnt_find_track">Sorry, I couldn\'t find a track to play.</string>
    <string name="couldnt_find_episode">Sorry, I couldn\'t find the episode you specified.</string>
    <string name="found_more_than_one_show">Sorry, I found more than one matching show. Please be more specific.</string>
    <string name="couldnt_find">Sorry, I couldn\'t find %s.</string>
    <string name="couldnt_find_next">Sorry, I couldn\'t find %1$s, or else no episodes are on deck.</string>
    <string name="couldnt_find_season">Sorry, I couldn\'t find that season.</string>
    <string name="found_more_than_one_movie">I found more than one matching movie. Please be more specific.</string>
    <string name="now_watching_video">Now watching %1$s on %2$s.</string>
    <string name="playback_paused">Playback paused.</string>
    <string name="playback_resumed">Playback resumed.</string>
    <string name="playback_stopped">Playback stopped.</string>
    <string name="trigger_instructions">To trigger voice recognition, simply add the <b>Voice Control for Plex</b> shortcut on to your home screen via the menu.</string>
    <string name="title_changelog">What\'s New</string>
    <string name="changelog_close">Close</string>
    <string name="no_wifi_connection">No WiFi Connection</string>
    <string name="no_wifi_connection_message">A WiFi connection is required. Please check your WiFi settings and try again.</string>
    <string name="voice_prompt">Voice Control for Plex is listening</string>
    <string name="searching_for_plex_servers">Searching for Plex Servers</string>
    <string name="didnt_understand">Sorry, I didn\'t understand %s.</string>
    <string name="didnt_understand_that">Sorry, I didn\'t understand that.</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="create_shortcut_blurb">You may create a shortcut that uses a specific Server and Client, or one that will use whatever your current Server and Client are set to when run. Which would you like to do?</string>
    <string name="create_shortcut_blurb_no_servers">You may create a shortcut that uses a specific Server and Client, or one that will use whatever your current Server and Client are set to when run. However, you have not scanned for Servers and/or Clients yet, so you can only create a shortcut that uses the current Server and Client. Do you wish to continue?</string>
    <string name="specify_now">Specify Now</string>
    <string name="use_current">Use current Server/Client</string>
    <string name="shortcut_created">Shortcut created</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_title">Plex Login</string>
    <string name="login_message">Enter your Plex username and password below. These will not be saved - only your Authentication Token will be saved.</string>
    <string name="login_error">Sorry, there was an unknown error trying to log in.</string>
    <string name="logged_in">You are now logged in.</string>
    <string name="logged_out">You are now logged out.</string>
    <string name="sections">sections</string>
    <string name="searching_for">Searching for %s.</string>
    <string name="searching_for_episode">Searching for %1$s episode %2$s.</string>
    <string name="searching_for_show_season_episode">Searching for %1$s season %2$s episode %3$s.</string>
    <string name="searching_for_album">Searching for %1$s by %2$s.</string>
    <string name="pin_title">Plex login</string>
    <string name="pin_message">Please visit http://plex.tv/pin from your computer and enter the following code: %s.</string>
    <string name="button_manual">Manual</string>
    <string name="button_pin">Pin</string>
    <string name="login_unauthorized">Sorry, but I got an unauthorized login error. You will have to login again.</string>
    <string name="remote_scan_error">Sorry, but I got an error trying to access myPlex. You may have to logout and log back in.</string>
    <string name="searching_for_plex_clients">Searching for Plex Clients</string>
    <string name="select_plex_client">Select a Plex Client</string>
    <string name="no_servers_found">No Plex Servers Found.</string>
    <string name="no_clients_found">No Plex Clients Found.</string>
    <string name="servers_refreshed">Servers refreshed.</string>
    <string name="error_seeking">Sorry, there was an error seeking: %s.</string>
    <string name="connected_to">Connected To</string>
    <string name="disconnect">Disconnect</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="rewind">Rewind</string>
    <string name="playing_on">Playing on %s</string>
    <string name="client_not_found">Sorry, I couldn\'t find the client you specified.</string>
    <string name="connected_to2">Connected to %s.</string>
    <string name="disconnected">Disconnected</string>
    <string name="must_purchase_chromecast">Chromecast support is available as an in-app purchase for %s. Would you like to proceed?</string>
    <string name="no_thanks">No thanks</string>
    <string name="must_purchase_chromecast_error">Sorry, but Chromecast support is only available via an in app purchase. To purchase, select your Chromecast as the client in the main settings.</string>
    <string name="this_device">This device</string>
    <string name="network_connection_required">A network connection is required</string>
    <string name="mobile_network_connection_active">While a mobile network connection is active, playback is only supported onto this device, through the official Plex client.</string>
    <string name="mobile_connection_login_required">You must be logged in to MyPlex in order to select a server when not on WiFi.</string>
    <string name="searching_for_the_album">Searching for the album %s.</string>
    <string name="connecting">Connecting</string>
    <string name="client_lost_connection">I lost the connection with %s.</string>
    <string name="your_current_default_client_is">Your current default client is %s.</string>
    <string name="tap_cast_icon_to_change_default_client">Tap the cast icon to change the default client.</string>
</resources>
