<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:textColor="@color/white"
            android:orientation="vertical"
            android:gravity="center">

            <ListView
                android:id="@+id/settingsList"
                android:layout_height="fill_parent"
                android:layout_width="match_parent">
            </ListView>

            <CheckBox
                android:id="@+id/resumeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resumeChecked"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/resume_if_in_progress"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/helpUsageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resumeCheckbox"
                android:onClick="showUsageExamples"
                android:layout_centerInParent="true"
                android:background="@null"
                android:src="@drawable/usage_examples" />

            <TextView
                android:id="@+id/widgetInstructions"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="10sp"
                android:text="@string/widget_instructions"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/taskerInstructionsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/tasker_instructions"
                android:visibility="gone"
                android:gravity="center"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/taskerInstallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="installTasker"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:background="@null"
                android:src="@drawable/install_tasker" />

            <ImageButton
                android:id="@+id/utterInstallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="installUtter"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:background="@null"
                android:src="@drawable/install_utter" />

            <ImageButton
                android:id="@+id/autoVoiceInstallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="installAutoVoice"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:background="@null"
                android:src="@drawable/install_autovoice" />

            <TextView
                android:id="@+id/taskerImportHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="10sp"
                android:text="@string/tasker_import_header"
                android:gravity="center"
                android:visibility="gone"
                android:textSize="18sp"
                />

            <ImageButton
                android:id="@+id/taskerImportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@null"
                android:src="@drawable/import_tasker_project"
                android:onClick="importTaskerProject"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>